--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,19 @@ html {
   background: #000;
   font-family: 'Inter', sans-serif;
 }
+
+input, select, textarea {
+  all: unset;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
